# clox

./: .clang-format  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yaml
src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  native_fn.c  native_fn.h  object.c  object.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
tests/: compiler_test.c  scanner_test.c
